# soofi-trainer

./: .env  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.lmstudio.yml  docker-compose.ollama.yml  docker-compose.override.yaml  docker-compose.triton.yml  docker-compose.vllm.yml  docker-compose.yml  down.sh  todos.md  up.sh  up_edc.sh
.claude/: settings.json
.gitlab/issue_templates/: bug.md  task.md  userstory.md
advisor/: Dockerfile  pyproject.toml
advisor/src/: a2a_handler.py  graph.py  i18n.py  llm_config.py  prompts.py  server.py  tools.py
advisor/src/prompts/: system_de.md  system_en.md
advisor/tests/: test_deduplication.py
compose/: aas.yml  aas_mnestix.yml  admin.yml  edc.yml  interaction.yml  knowledge.yml  monitoring.yml  tools.yml  training.yml
compose/edc/: nodes.properties
compose/experiments/: vllm-mixed-agents.yml
compose/monitoring/: prometheus.yml
compose/presets/: vllm-mixed-models.yml  vllm-nemotron-cascade-2-30b-a3b.yml  vllm-nvidia-nemotron-3-super-120b-a12b-fp8.yml  vllm-nvidia-nemotron-3-super-120b-a12b-nvfp4.yml  vllm-qwen35-122b-fp8.yml
dataset-agent/: Dockerfile  pyproject.toml
dataset-agent/src/: __init__.py
docs/: AIDatasetSubmodelTemplate.json  demo_script_de.md  demo_script_en.md  llm_specialization_agent_prompt.md  soofi-ci.md
docs/issues/: README.md  T-01-1-docker-compose-foundation.md  T-01-2-open-webui-setup.md  T-01-2-stack-management-scripts.md  T-01-3-n8n-chatbot.md  T-01-3-stack-management-scripts.md  T-01-4-gitlab-ci.md  T-01-4-open-webui-healthcheck.md  T-01-5-env-cleanup.md  T-01-6-compose-restructure.md  T-02-1-knowledge-collection.md  T-02-1-knowledge-ingestion-container.md  T-02-2-knowledge-documents.md  T-02-2-knowledge-ingestion.md  T-02-3-knowledge-methods.md  T-02-3-reranking.md  T-02-4-minio-knowledge-urls.md  T-02-5-docs-proxy.md  T-03-1-langgraph-agent.md  T-03-2-agent-prompts.md  T-03-3-decision-logic.md  T-03-3-starter-prompts.md  T-03-4-ci-pipeline.md  T-03-4-decision-logic.md  T-03-5-recommendation-report.md  T-03-5-stateless-agents-flow-orchestration.md  T-03-6-routing-tests.md  T-04-1-end-to-end-test.md  T-04-1-huggingface-mcp.md  T-04-2-agent-integration.md  T-04-2-eclipse-dataspace-mcp.md  T-04-3-agent-integration.md  T-05-1-end-to-end-test.md  T-05-1-huggingface-mcp.md  T-05-2-agent-integration.md  T-06-1-network-access.md  T-06-2-ansible-setup.md  T-06-3-server-provisioning.md  T-06-4-trainer-integration.md  T-06-5-model-selection.md  (+47 more)
edc-mcp/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
edc-mcp/src/edc_mcp/: client.py  main.py
edc-mcp/src/edc_mcp/api/: __init__.py  assets.py  catalog.py  contract_agreement.py  contract_definitions.py  contract_negotiations.py  dataset.py  federated_catalog.py  policy_definitions.py  transfer_processes.py
edc-mcp/src/edc_mcp/tools/: __init__.py  assets.py  catalog.py  contract_agreement.py  contract_definitions.py  contract_negotiations.py  dataset.py  federated_catalog.py  policy_definitions.py  transfer_processes.py
huggingface-mcp/: Dockerfile  pyproject.toml
huggingface-mcp/src/huggingface_mcp/: __init__.py  server.py
interaction-agent/: .dockerignore  Dockerfile  pyproject.toml
interaction-agent/src/: a2a_client.py  a2ui_surfaces.py  agent.py  constants.py  friction.py  graph.py  i18n.py  llm_config.py  mock_agent.py  prompts.py  session_logger.py  speech.py  sse_stream.py  surfaces.py
interaction-agent/src/prompts/: slot_extraction_de.md  slot_extraction_en.md  system_de.md  system_en.md
interaction-agent/tests/: test_graph.py  test_prompts.py  test_session_logger.py  test_speech.py  test_sse_stream.py  test_web_search_backend.py
knowledge-ingestion/: Dockerfile  pyproject.toml
knowledge-ingestion/src/knowledge_ingestion/: ingest.py
knowledge/comparison/: rag_vs_fine_tuning-meta.yaml  rag_vs_fine_tuning.md
knowledge/fine_tuning/: best_practices-meta.yaml  best_practices.md  pitfalls-meta.yaml  pitfalls.md
knowledge/methods/: continued_pretraining.md  dpo.md  instruction_tuning.md  knowledge_distillation.md  lora-meta.yaml  lora.md  prefix_tuning.md  qlora.md  rag-meta.yaml  rag.md  rlhf.md  sft.md
knowledge/models/: base_models.md  model_selection_guide.md  sovereignty-meta.yaml  sovereignty.md
knowledge/rag/: best_practices-meta.yaml  best_practices.md  pitfalls-meta.yaml  pitfalls.md
knowledge/soofi/: press description.md  soofi-project-meta.yaml  soofi-project.md  soofi-trainer.md
knowledge/sovereignty/: 8ra_initiative-meta.yaml  8ra_initiative.md  anbieter_vergleich-meta.yaml  anbieter_vergleich.md  grundlagen.md  (+9 more)
landingpage/: Dockerfile  docker-entrypoint.sh
n8n/: import_workflows.sh  init-script.sh  init_script.sh
openwebui/: import_functions.sh
soofi-ui/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
stt/: Dockerfile  pyproject.toml
tests/: test_vllm_llm_wiring.py
training-agent/: Dockerfile  pyproject.toml
training-pipeline/: README.md
training-pipeline/training-gateway/: Dockerfile  Makefile  README.md  pyproject.toml
training-pipeline/training-gateway/src/training_gateway/: aas_push.py  db.py  mcp_tools.py  models.py  rest_api.py  server.py  webhooks.py
training-pipeline/training-gateway/src/training_gateway/backends/: __init__.py  base.py  config.py  docker_backend.py  local_backend.py
training-pipeline/training-gateway/tests/: conftest.py
training-pipeline/training-gateway/tests/e2e/: test_failure_mode.py  test_lora_success.py  test_rag_skip_training.py
training-pipeline/training-gateway/tests/integration/: test_backend_local.py  test_mcp_tools.py  test_webhooks.py
training-pipeline/training-gateway/tests/unit/: test_aas_push.py  test_backends.py  test_db.py  test_docker_backend.py  test_models.py
tts/: pyproject.toml
tts/src/: server.py
vector-mcp/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
vector-mcp/scripts/: seed_testdata.py
vector-mcp/src/vector_mcp/: __init__.py  server.py
(+96 files in other folders)
