[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soofi-huggingface-mcp"
version = "0.1.0"
description = "MCP server for HuggingFace dataset search"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5",
    "uvicorn[standard]>=0.40.0",
    "huggingface-hub>=0.34.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "black>=26.1.0",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
]

[project.scripts]
soofi-huggingface-mcp = "huggingface_mcp.server:main"

[tool.setuptools]
packages = ["huggingface_mcp"]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
