[project]
name = "soofi-interaction-agent"
version = "0.1.0"
description = "Mock AG-UI backend for Soofi Trainer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
