[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soofi-knowledge-ingestion"
version = "0.1.0"
description = "One-shot knowledge ingestion pipeline for Soofi Trainer"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "DFKI GmbH" }
]

dependencies = [
    "weaviate-client>=4.19.2",
    "langchain>=1.2.10",
    "langchain-text-splitters>=1.1.0",
    "langchain-openai>=1.1.9",
    "langchain-ollama>=1.0.1",
    "langchain-google-genai>=4.2.0",
    "langchain-voyageai>=0.3.2",
    "pyyaml>=6.0.3",
]

[tool.setuptools]
packages = ["knowledge_ingestion"]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
