[project]
name = "soofi-tts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133",
    "uvicorn[standard]>=0.41",
    "openai>=1.58,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
